creacion del footer y header

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,16 @@
-<p>footer works!</p>
+<footer class="container-fluid">
+    <section class="row">
+        <article class="col">
+            <h5><a href="#">Contacto</a></h5>
+            <h5><a href="#">Quienes Somos</a></h5>
+        </article>
+        <article class="col">
+            <h5><a href="#">Terminos y condiciones</a></h5>
+            <h5><a href="#">Politicas de la organización</a></h5>
+        </article>
+        <article class="col">
+            <h5><a href="#">Siguenos en nuestras redes sociales</a></h5>
+            <h5> <i class="bi bi-facebook"></i> <i class="bi bi-instagram"></i> <i class="bi bi-twitter-x"></i> </h5>
+        </article>
+    </section>
+</footer>
