estructurando el proyecto

--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+<main class="container-fluid">
+    <section class="row">
+        <form class="col-6">
+            <div class="form-title">
+                <h5>Inicio de Sesión</h5>
+                <h6>Completa todos los campos para ingresar con tu perfil de usuario</h6>
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">ingresa tu correo electronico</div>
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="exampleInputPassword1">
+            </div>
+            <div class="form-options">
+                <a>Olvidaste tu contraseña?</a>
+                <a>Registrarme</a>
+            </div>
+            <button type="submit" class="btn btn-success">Ingresar</button>
+        </form>
+    </section>
+</main>
