--- a/src/app/modules/auth/components/registro/registro.component.html
+++ b/src/app/modules/auth/components/registro/registro.component.html
@@ -1,1 +1,23 @@
-<p>registro works!</p>
+<main class="container-fluid">
+    <section class="row">
+        <form class="col-6">
+            <div>
+                <h5>Registro de usuario</h5>
+                <h6>Completa todos los campos para crear tu perfil de usuario</h6>
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword1">
+            </div>
+            <div class="form-options">
+                <a>Ya tengo un cuenta</a>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </section>
+</main>
