--- a/src/app/modules/principal/components/home/home.component.html
+++ b/src/app/modules/principal/components/home/home.component.html
@@ -3,7 +3,8 @@
     <section class="row">
         <h1 class="col-12">Conoce nuestras campañas y sumate!</h1>
         <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="https://www.greenpeace.org/static/planet4-chile-stateless/2024/04/022f47d8-gpch-los-bronces-integrados-credito-nicole-kramm-caifal-greenpeace-15-510x340.jpg"
+                class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Los bronces</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -12,7 +13,8 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="https://www.greenpeace.org/static/planet4-chile-stateless/2024/02/83616515-gpc_cartelaculeo_03-510x340.jpg"
+                class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Aculeo: Humedal urbano</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -21,7 +23,8 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="https://www.greenpeace.org/static/planet4-chile-stateless/2018/11/3cf2de80-img_0308-510x340.jpg"
+                class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Freno a la expansión salmonera</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -30,8 +33,18 @@
             </div>
         </div>
     </section>
-    <section>
-        <h1 class="col-12">¿Quienes Somos?</h1>
 
+    <section class="row">
+        <h1 class="col-12">¿Quienes Somos?</h1>
+        <figure class="col-md-3">
+            <img src="https://www.greenpeace.org/static/planet4-chile-stateless/2023/07/15264193-25_make_a_donation-1-300x300.png"
+                alt="imagen">
+        </figure>
+        <article class="col-md-3">
+            <p>
+                Trabajamos para defender el medio ambiente, promover la paz y estimular a las personas para que cambien
+                actitudes y comportamientos que ponen en riesgo a la naturaleza.
+            </p>
+        </article>
     </section>
 </main>
