--- a/src/app/modules/principal/components/home/home.component.css
+++ b/src/app/modules/principal/components/home/home.component.css
@@ -7,4 +7,14 @@ section{
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    gap: 2vh;
+}
+
+
+section:nth-child(2){
+    justify-content: start;
+}
+section:nth-child(2) > article{
+    display: flex;
+    align-items: center;
 }
