--- a/src/app/modules/admin-campaing/components/add-campaing/add-campaing.component.html
+++ b/src/app/modules/admin-campaing/components/add-campaing/add-campaing.component.html
@@ -1,1 +1,26 @@
-<p>add-campaing works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Añadir Campaña</title>
+</head>
+<body>
+    <div class="contenedor">       
+        <!-- No se como hacer la mayoria de inputs aun asi que los pondre como una variable de tipo texto -->
+            <label for="nombre">Nombre de la ONG</label>
+            <input type="text" >
+        
+            <label for="duracion">Duracion de la campaña</label>
+            <input type="text" >
+            
+            <label for="montoRecaudacion">Monto a recaudar</label>
+            <input type="text" >
+            
+            <label for="detalles">Detalles sobre la ONG</label>
+            <input type="text" >
+            
+            <button>Añadir</button>
+    </div>
+</body>
+</html>
