--- a/src/app/modules/admin-campaing/components/add-campaing/add-campaing.component.css
+++ b/src/app/modules/admin-campaing/components/add-campaing/add-campaing.component.css
@@ -5,11 +5,21 @@
     padding: 10%;
     display: flex;
     justify-content: center;
-    align-items: center;
-    
+    align-items: center;   
     height: 90vh;
 }
 
+.formulario{
+    max-width: 400px; /* Ajusta el ancho máximo del formulario */
+    width: 100%;
+    margin-top: 40px;
+    margin-left: 39%;
+    margin-bottom: 40px;
+    background-color: #fff;
+    padding: 15px; /* Reduce el padding */
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 label {
     display: block;
     margin-bottom: 8px;
@@ -36,4 +46,5 @@ button{
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s, transform 0.3s;
+    
 }
