--- a/src/app/modules/admin-campaing/components/add-campaing/add-campaing.component.html
+++ b/src/app/modules/admin-campaing/components/add-campaing/add-campaing.component.html
@@ -8,19 +8,22 @@
 <body>
     <div class="contenedor">       
         <!-- No se como hacer la mayoria de inputs aun asi que los pondre como una variable de tipo texto -->
+            <div class="formulario">
             <label for="nombre">Nombre de la ONG</label>
             <input type="text" >
         
             <label for="duracion">Duracion de la campaña</label>
-            <input type="text" >
+            <input type="date" >
             
-            <label for="montoRecaudacion">Monto a recaudar</label>
-            <input type="text" >
+            <label for="Monto">Monto</label>
+            <input type="text">
+            
             
             <label for="detalles">Detalles sobre la ONG</label>
             <input type="text" >
             
             <button>Añadir</button>
+        </div>
     </div>
 </body>
 </html>
