--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,30 @@
-<app-header></app-header>
+<nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+        <h5 class="navbar-brand"><i class="bi bi-flower1"></i> Life & Sustainability Today</h5>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Administrar mis campañas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Mi perfil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Panel de control</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Cerrar Sesión</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <router-outlet />
-
-<app-footer></app-footer>
