--- a/src/app/pages/auth/login/login.component.css
+++ b/src/app/pages/auth/login/login.component.css
@@ -1,13 +1,8 @@
-main{
-    padding: 2vh;
-}
-
 section{
-    padding: 2vh;
+    height: 95vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 95vh;
 }
 
 form{
@@ -16,12 +11,17 @@ form{
     gap: 2vh;
 }
 
-form > div{
-    display: flex;
-    flex-direction: column;
+fieldset > *{
+    text-align: center;
+
 }
 
 .form-options{
-    flex-direction: row !important;
+    display: flex;
     justify-content: space-between;
+}
+
+.form-options > *{
+    color: black;
+    text-decoration: none;
 }
