--- a/src/app/pages/auth/registro/registro.component.css
+++ b/src/app/pages/auth/registro/registro.component.css
@@ -1,13 +1,9 @@
-main{
-    padding: 2vh;
-}
-
 section{
     padding: 2vh;
+    height: 95vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 95vh;
 }
 
 form{
@@ -16,20 +12,17 @@ form{
     gap: 2vh;
 }
 
-form > div{
-    display: flex;
-    flex-direction: column;
+fieldset > *{
+    text-align: center;
+
 }
 
 .form-options{
-    flex-direction: row !important;
+    display: flex;
     justify-content: space-between;
 }
 
-.form-title > *{
-    text-align: center;
-}
-
-input{
-    outline: none;
+.form-options > *{
+    color: black;
+    text-decoration: none;
 }
