home terminada. falta revisar responsividad

--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -1,1 +1,87 @@
+<main class="container-fluid">
+    <section class="row">
+        <article class="col-md-6">
+            <h1 class="texto-sect1">Juntos por un planeta mas <span>VERDE</span></h1>
+            <p class="texto-sect1">Únete a nuestras campañas ecológicas y sé parte del cambio que nuestro planeta
+                necesita.</p>
+            <div class="title-options">
+                <button class="btn btn-dark">Participar Ahora</button>
+                <button class="btn btn-secondary">Conoce Mas</button>
+            </div>
+        </article>
+    </section>
 
+    <section class="row">
+        <h1>Nuestras Campañas Destacadas</h1>
+        <div class="card col-md">
+            <img src="https://www.greenpeace.org/static/planet4-chile-stateless/2024/04/022f47d8-gpch-los-bronces-integrados-credito-nicole-kramm-caifal-greenpeace-15-510x340.jpg"
+                class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="#" class="btn btn-primary">Saber Mas</a>
+            </div>
+        </div>
+        <div class="card col-md">
+            <img src="https://www.greenpeace.org/static/planet4-chile-stateless/2024/02/83616515-gpc_cartelaculeo_03-510x340.jpg"
+                class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Los Bronces</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="#" class="btn btn-primary">Saber Mas</a>
+            </div>
+        </div>
+        <div class="card col-md">
+            <img src="https://www.greenpeace.org/static/planet4-chile-stateless/2018/11/3cf2de80-img_0308-510x340.jpg"
+                class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a href="#" class="btn btn-primary">Saber Mas</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="row">
+        <article class="col">
+            <h1>Nuestro impacto</h1>
+            <h3>Desde nuestra fundación hemos logrado:</h3>
+            <ul>
+                <li><i class="bi bi-flower1"></i> Plantar más de 100,000 árboles</li>
+                <li><i class="bi bi-flower1"></i> Limpiar 500 km de costas</li>
+                <li><i class="bi bi-flower1"></i> Educar a 50,000 jóvenes sobre ecología</li>
+            </ul>
+        </article>
+        <figure class="col">
+            <img src="https://www.greenpeace.org/static/planet4-chile-stateless/2022/12/72fae2b3-gp0stu9uf_medium_res_with_credit_line-768x513.jpg"
+                alt="" class="img-fluid">
+        </figure>
+    </section>
+
+    <section class="row">
+        <h1>Mantente Informado</h1>
+        <h6>Completa los siguientes campos para recibir información sobre campañas ecologicas y mas!</h6>
+        <form class="col-md-6">
+            <div class="mb-3">
+                <label for="name" class="form-label">Nombre Completo</label>
+                <input type="email" class="form-control" id="name" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">Ingresa tu nombre completo</div>
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                <div id="emailHelp" class="form-text">Ingresa tu correo electronico</div>
+            </div>
+            <div class="mb-3">
+                <label for="descrip" class="form-label">Descripcion</label>
+                <textarea class="form-control" aria-label="With textarea" id="descrip"></textarea>
+                <div id="emailHelp" class="form-text">Agrega una descripcion de tu asunto (opcional)</div>
+            </div>
+            <button type="submit" class="btn btn-dark">Contactanos</button>
+        </form>
+    </section>
+
+</main>
