modulo de campañas creado y casi termminado

--- a/src/app/pages/home/home/home.component.html
+++ b/src/app/pages/home/home/home.component.html
@@ -46,7 +46,7 @@
     </section>
 
     <section class="row">
-        <article class="col">
+        <article class="col-md">
             <h1>Nuestro impacto</h1>
             <h3>Desde nuestra fundación hemos logrado:</h3>
             <ul>
@@ -55,7 +55,7 @@
                 <li><i class="bi bi-flower1"></i> Educar a 50,000 jóvenes sobre ecología</li>
             </ul>
         </article>
-        <figure class="col">
+        <figure class="col-md">
             <img src="https://www.greenpeace.org/static/planet4-chile-stateless/2022/12/72fae2b3-gp0stu9uf_medium_res_with_credit_line-768x513.jpg"
                 alt="" class="img-fluid">
         </figure>
