--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Administrar mis campañas</a>
+                    <a class="nav-link" href="/campanias-admin">Administrar mis campañas</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/campanias">Buscar Campañas</a>
