--- a/src/app/pages/campania-admin/campania-admin/campania-admin.component.html
+++ b/src/app/pages/campania-admin/campania-admin/campania-admin.component.html
@@ -3,17 +3,17 @@
         <section>
             <h1>Crear Campañas</h1>
             <h2>En este apartado puedes crear tus campañas para que la gente pueda contribuir con donaciones</h2>
-            <button>Ingresar</button>
+            <button (click)="gotToAddCampaing()">Ingresar</button>
         </section>             
         <section>
             <h1>Estado de Campañas</h1>
             <h2>En este apartado puedes ver actualizaciones y estado en tiempo real de las campañas</h2>
-            <button>Ingresar</button>
+            <button (click)="gotTocampaingEstate()">Ingresar</button>
         </section>             
         <section>
             <h1>Reportes</h1>
             <h2>En este apartado puedes solicitar un reporte del desempeño de la campaña detallando las donaciones recibidas y la meta a cumplir</h2>
-            <button>Ingresar</button>
+            <button (click)="goToCampaingReport()">Ingresar</button>
         </section>             
         <section>
             <h1>Control de campañas</h1>
