diseño de pagina al 50%

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,16 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/campanias-admin">Administrar mis campañas</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        Administrar mis campañas
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/crear-campania">Crear Campañas</a></li>
+                        <li><a class="dropdown-item" href="/estado-campania">Estados de mis campañas</a></li>
+                        <li><a class="dropdown-item" href="/reportes">Reportes</a></li>
+                    </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/campanias">Buscar Campañas</a>
