--- a/src/app/pages/campania-admin/crear-campania/crear-campania.component.css
+++ b/src/app/pages/campania-admin/crear-campania/crear-campania.component.css
@@ -1,16 +1,7 @@
-body {
-    font-family: Arial, sans-serif;
-    height: 100vh;
-    margin: 0;
-    background-color: #ffffff;
-}
-
 section {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     gap: 1rem;
-    border: 1px solid #e5e7eb;
-    border-radius: 0.5rem;
     padding: 1.5rem;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 }
