--- a/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -1,16 +1,16 @@
 <main class="container-fluid">
     <section class="row">
-        <form class="col-md-6">
+        <form class="col-md-6" [formGroup]="forgotForm" (ngSubmit)="forgotPassword()">
             <h1>Recuperación de tu contraseña</h1>
             <h6>Ingresa tu correo electronico para recuperar tus credenciales</h6>
             <div class="mb-3">
                 <label for="email" class="form-label">Correo Electronico</label>
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
-                    placeholder="Ingresa tu correo electronico">
-                <div id="emailHelp" class="form-text">Se te enviara un correo electronico para la recuperacion de tu
-                    contraseña</div>
+                <input type="email" class="form-control" id="email" placeholder="Ingresa tu correo electronico"
+                    formControlName="correo">
+                <div class="text-danger">{{validarCampo('correo')}}</div>
             </div>
-            <button type="submit" class="btn btn-success" (click)="recuperarContrasena()">Enviar</button>
+            
+            <button type="submit" class="btn btn-success">Enviar</button>
         </form>
     </section>
 </main>
