--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><span class="material-symbols-outlined">campaign</span> Life and Sustentability
+    <a class="navbar-brand" routerLink="home"><span class="material-symbols-outlined">campaign</span> Life and
+      Sustentability
       Today </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
