--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,10 +13,10 @@
           <a class="nav-link" href="#">Como funciona?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Registrarme</a>
+          <a class="nav-link" routerLink="registro">Registrarme</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Iniciar Sesión</a>
+          <a class="nav-link" routerLink="login">Iniciar Sesión</a>
         </li>
       </ul>
     </div>
