--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,12 +12,28 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Como funciona?</a>
         </li>
+        @if (!verificarToken()) {
         <li class="nav-item">
           <a class="nav-link" routerLink="registro">Registrarme</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="login">Iniciar Sesión</a>
         </li>
+        }@else {
+        @switch (cargo) {
+        @case (1) {
+          <li class="nav-item">
+            <a class="nav-link" routerLink="registro">Administrar mis campañas</a>
+          </li>
+        }
+        }
+        <li class="nav-item">
+          <a class="nav-link" routerLink="registro">Perfil de usuario</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="login" (click)="logout()">Cerrar Sesión</a>
+        </li>
+        }
       </ul>
     </div>
   </div>
