--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,6 +1,6 @@
 <main class="container-fluid">
     <section class="row">
-        <form class="col-lg-6">
+        <form class="col-lg-6" [formGroup]="loginForm" (ngSubmit)="login()">
             <div class="mb-3">
                 <h1>Inicio de Sesión</h1>
                 <h6 class="card-subtitle">Completa los campos para ingresar con tu usuario</h6>
@@ -8,17 +8,18 @@
             <div class="mb-3">
                 <label for="email" class="form-label">Correo electronico</label>
                 <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
-                    placeholder="Ingresa tu correo electronico">
+                    placeholder="Ingresa tu correo electronico" formControlName="email">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="password" placeholder="Ingresa tu Contraseña">
+                <input type="password" class="form-control" id="password" placeholder="Ingresa tu Contraseña"
+                    formControlName="password">
             </div>
             <div class="mb-3 login-options">
                 <a routerLink="/registro">Registrarme</a>
                 <a href="">Olvide mi contraseña</a>
             </div>
-            <button type="submit" class="btn btn-primary">Ingresar</button>
+            <button type="submit" class="btn btn-success">Ingresar</button>
         </form>
     </section>
 </main>
